# RPG-Creator

./: .gitignore  Barbara_the_Dwarf_barbarian_lvl1.txt  Barbara_the_Dwarf_barbarian_lvl3.txt  Barbara_the_Dwarf_barbarian_lvl4.txt  Barbara_the_Human_barbarian_lvl2.txt  David_the_Elf_sorcerer_lvl1.txt  David_the_Elf_sorcerer_lvl2.txt  LICENSE  README.md  RPG Character Creator.py  Roger_the_Halfling_rogue_lvl3.txt  character.py  classes.py  combatant.py  enemies.py  factory_methods.py  main.py  pyproject.toml  requirements.txt  upcoming.md
tests/: test_character.py  test_combatant.py  test_main.py
tests/fixtures/: fallen_fighter.txt
