[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rpg-creator"
version = "0.1.0"
description = "Command-line Python RPG character creator and battle simulator."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.mypy]
python_version = "3.10"
files = ["main.py", "character.py", "classes.py", "combatant.py", "enemies.py", "tests"]
check_untyped_defs = true
warn_unused_ignores = true
